@@ -2,14 +2,16 @@
 Hash: SHA256
 
 DIST otter-0.9.04.tar.gz 1829210 SHA256 687bbca09b5bc20626f3b5e2bbccb7b10c35af8cb93dfdce31e0a3b61e5e8a87 SHA512 4845c083bde142e5bc4b991ad7481cb5368d125132a13c042e8a9f1658f483fa9ab2a04c47c1ccb9d27029f4453ef06d9994d4f21bb42716dbba1f69a06a8054 WHIRLPOOL 1e2bf5639e81c02801c285fd003635b4d1b27a8569f893584887405c877eac71129b29ce8010b25b113e78ce1cd05ebb4def4b6101e981d002f509684dbbbc46
+DIST otter-0.9.05.tar.gz 2302624 SHA256 78db7ea09720b3196b1fb04714b139cc4bfa66cb2974ed18852be024686683fe SHA512 60587f90c3fd758ad287015c9e62a408b2e349d8c098e7ac54346b051056915095e74ae59f3b283f4fd30c3655c1db25d546db4af8e357aaafa22d8ae920235d WHIRLPOOL 9a3881dc2bb6284b94061236a2419af1e20d01ba1b3f220a13f377a564c25a3cea04e3037e59b5347f6c8384b805bd1d733ca94bf4f35963a15db87b082a1729
 EBUILD otter-0.9.04.ebuild 1169 SHA256 0dd8dfbe550c64ac057a3568534dd23a24a229f03bd9224e1485a17ace7979e4 SHA512 344afa8fddb669153ebf10b68898d99f43488aca04fe92ae2c7fd92d05a779a557c961d7bbcad03a744371f253477039456d17b355d82d79d033cec22810e93c WHIRLPOOL 380f71acd97c468e868517411fbab170f98650d1da288454555ea456a929162ddd1fb8787e638471a6a2a3a6c7ca285c1a3789d272e2dfee6ed340b968893bc5
+EBUILD otter-0.9.05.ebuild 1211 SHA256 1b53cf4e5f22881639c008033dd087f64fe199c2d9294e22f54ffc40780c7ef6 SHA512 4549c6134fe2eb369968b9a9b4bde1ce20c627c2f78e5fcfeb139c472fa5356e6330deb28649d99688201751822ef8ec47cd82b9516f5a1b4a2843137773c956 WHIRLPOOL 4ae6f3a39d946c331c3140f3c220d1091258b54faa4d56119839fc9bd2db2632621afb33d32c648588e7ccd19e9c5c8579c24c7c9fbda54de2629c3595ae96bf
 EBUILD otter-9999.ebuild 1145 SHA256 6c91aacbf8d8d35043c512434c60ace7ea22d402e6d41c6ae07880ba0e2aa4d0 SHA512 3a431e61517b1a13672e73c44e5364916269786cd6fe1c672252316cf5833d55f29f0084c43dbc5175bbcd6e8f87bf7a619db73b2f00c5e7b95e6b4e665419c2 WHIRLPOOL 72ab8167813a35d3b846db6e3f2571d64ed9b9c34c39c2c134ed6254b89bebab6a6079d7c9e60ec2253013f987d7780552c9c15594618bb8177f1cd567df1371
-MISC ChangeLog 1394 SHA256 d1b4cfdd7e3f3fec243a852ecb2c02db3dca6b2e7ef242415c4adb0bb1fabde7 SHA512 6b145b6b168c1bb5b9b7d11dd543e343b4f30280b0d5bc547c9428d48860c5a2a05426c2c259bb878311385af1de6fc3929a9b8305dfc4396aabc7887e781f2c WHIRLPOOL da2f7cdf50ea521f3983f12ca02b732128090d24f7a97822f472eb6e796e5c51b9efd53f4c3e3f1fc0a3189dd907a685c4f882c71ef0cd01c38395ebd5cca582
+MISC ChangeLog 1510 SHA256 46fe0ef512615a35b53faa5b9c7a2a3a5974e6d38760a443a89015caf2b151d1 SHA512 882183d77504acd011020f9f720abd60154ea513c9c55a4f51acf286ecaa560ff9b1be2cb0f6a058eb48c1befbbe0007c8d2014a63e602b35bfc628456b8fff6 WHIRLPOOL 28221ef9b692864f81b1267c420d2faf887b5ffa648c0fac211abdc86957b70c6e435ae893f83014a5cc6a00ce01538119c5022ba996f7d2733de173e66f90e4
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTSEoEACgkQVWmRsqeSphMligCbB+oHeLP6x5zxB/OuBLiF7BvZ
-toMAn1Zc/rwciuahVpffOGAvSMYVUeGq
-=RVnO
+iEYEAREIAAYFAlUcx5wACgkQVWmRsqeSphPY5gCdGkDboU+vXRwCtY4x5U4VnwQ9
+XoUAnA0QJW4o/tTJDmZySFVz46SSUgoW
+=5FGH
 -----END PGP SIGNATURE-----
